[package]
name = "adv_linalg_core"
version = "0.2.0"
edition = "2021"

description = "A generically defined linear algebra library for simple addition and multiplication of vectors and matrices."
license = "MIT"
keywords = ["linear-algebra", "vector", "matrix"]
categories = ["mathematics", "science"]
